--- a/ejercicios html-css fácil M2/proyecto daily-plan/css/style-daily-plan.css
+++ b/ejercicios html-css fácil M2/proyecto daily-plan/css/style-daily-plan.css
@@ -98,6 +98,9 @@ h3{
     font-size: 0.8em;
     color: #AAABA8;
 }
+
+/*aquí empieza el dark daily plan*\
+
 .box1D{
     background-color:#555;
     height: 50em;
