--- a/ejercicios html-css medio M2/css/style-class-timetable.css
+++ b/ejercicios html-css medio M2/css/style-class-timetable.css
@@ -29,6 +29,11 @@ body {
   padding: 5% 8%;
   border-radius: 5px;
   margin-top: 3em;
+  margin-bottom: 1em;
+}
+i{
+  color: var(--purple);
+  font-size: 2em;
 }
 h1 {
   text-align: center;
